Fixed home background covering footer

--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -41,7 +41,7 @@ $button-height: 70px;
     left: 0;
     display: flex;
     height: 100%;
-    max-height: 100vh;
+    max-height: calc(100vh - #{$c-footer-height});
     width: 100%;
     max-width: 100vw;
     overflow: hidden;
